--- a/cli_app/Cargo.toml
+++ b/cli_app/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 clap = { version = "4.0", features = ["derive"] }
 log = "0.4.17"
 env_logger = "0.10.0"
+
+
+[dev-dependencies]
+assert_cmd = "2.0.11"
+predicates = "3.0.3"
