Add: Array & hashmap eg.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ members = [
     "db/db_insert", 
     "rust_core/traits/custom_iterator",
     "rust_core/traits/gen_traits",
+    "ds/arrays_and_hashing",
 ]
