--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,7 @@ members = [
     "ds/arrays_and_hashing",
     "algo/sorting",
     "networking/tcp_protocol_impl",
+    "interview_test",
+    "networking/web_server",
+    "rust_core/inter_mut",
 ]
